// Copyright 2023 Intrinsic Innovation LLC

syntax = "proto3";

package intrinsic_proto.executive;

import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";

option cc_enable_arenas = true;

enum TestEnum {
  TEST_ENUM_UNSPECIFIED = 0;
  TEST_ENUM_1 = 10;
  TEST_ENUM_2 = 20;
  TEST_ENUM_3 = 30;
}

// Message to test evaluation
message TestMessage {
  int32 int32_value = 1;
  int64 int64_value = 2;

  uint32 uint32_value = 3;
  uint64 uint64_value = 4;

  float float_value = 5;
  double double_value = 6;

  string string_value = 7;
  string cord_value = 8 [ctype = CORD];
  bytes bytes_value = 9;

  bool bool_value = 10;

  enum TestEnum {
    TEST_ENUM_UNSPECIFIED = 0;
    TEST_ENUM_1 = 1;
    TEST_ENUM_2 = 2;
  }

  TestEnum enum_value = 11;

  TestMessage message_value = 12;

  oneof foo_or_bar {
    string foo = 13;
    string bar = 14;
  }

  google.protobuf.Duration duration = 15;

  oneof foo_message_or_bar_message {
    TestMessage foo_msg = 16;
    TestMessage bar_msg = 17;
  }

  google.protobuf.Any any_message = 18;

  repeated int32 int32_list = 101;
  repeated int64 int64_list = 102;

  repeated uint32 uint32_list = 103;
  repeated uint64 uint64_list = 104;

  repeated float float_list = 105;
  repeated double double_list = 106;

  repeated string string_list = 107;
  repeated string cord_list = 108 [ctype = CORD];
  repeated bytes bytes_list = 109;

  repeated bool bool_list = 110;

  repeated TestEnum enum_list = 111;
  repeated TestMessage message_list = 112;

  map<int64, int32> int64_int32_map = 201;
  map<uint64, int32> uint64_int32_map = 202;
  map<string, int32> string_int32_map = 203;
  map<string, float> string_float_map = 207;
  map<string, double> string_double_map = 208;
  map<int64, TestMessage> int64_message_map = 204;
  map<uint64, TestMessage> uint64_message_map = 205;
  map<string, TestMessage> string_message_map = 206;

  optional int64 optional_int64_value = 301;
  optional string optional_string_value = 302;
  optional float optional_float_value = 303;
}
